JumpScript/tests/baselines/reference/propertyAccess2.errors.txt
tests/cases/compiler/propertyAccess2.jump(2,5): error TS2339: Property 'toBAZ' does not exist on type 'number'.


==== tests/cases/compiler/propertyAccess2.jump (1 errors) ====
    var foo: number;
    foo.toBAZ();
        ~~~~~
!!! error TS2339: Property 'toBAZ' does not exist on type 'number'.